--- a/SmartMarathon.IonicApp/www/templates/gSSI.html
+++ b/SmartMarathon.IonicApp/www/templates/gSSI.html
@@ -1,3 +1,76 @@
-<ion-view title="GSSI" id="gSSI" class="bgcolor-green">
-    <ion-content padding="true" style="background: url(img/bg-box.png) no-repeat center;background-size:cover;" class="has-header"></ion-content>
+<ion-view title="GSSI Nutrition Calculator" class="bgcolor-green">
+    <ion-content padding="true" style="background: url(img/bg-box.png) no-repeat center;background-size:cover;" class="has-header">
+        <form class="list">
+            <ion-item class="item-divider">Parameters</ion-item>
+            <label class="item item-select">
+                <span class="input-label">Gender</span>
+                <select ng-model="model.GenderSelected" ng-options="y.Text for (x, y) in data.Genders" ng-change="calculate()"></select>
+            </label>
+            <label class="item item-input">
+                <span class="input-label">Age</span>
+                <input type="number" min="1" max="99" class="input-label-number" ng-model="model.Age" ng-change="calculate()">
+                <span class="input-label-desc">years</span>
+            </label>
+            <label class="item item-input">
+                <span class="input-label">Height</span>
+                <input type="number" min="50" max="220" class="input-label-number" ng-model="model.Height" ng-change="calculate()">
+                <span class="input-label-desc">cms</span>
+            </label>
+            <label class="item item-input">
+                <span class="input-label">Weight</span>
+                <input type="number" min="50" max="500" class="input-label-number" ng-model="model.Weight" ng-change="calculate()">
+                <span class="input-label-desc">kgs</span>
+            </label>
+            <label class="item item-input">
+                <span class="input-label">Time spent running</span>                
+                <input type="number" min="1" max="600" class="input-label-number"ng-model="model.TimeSpent" ng-change="calculate()">
+                <span class="input-label-desc">minutes</span>
+            </label>
+            <label class="item item-input">
+                <span class="input-label">Avg Pace of your run</span>
+                <input type="number" min="2.5" max="20" step="0.1" class="input-label-number" ng-model="model.AvgPace" ng-change="calculate()">
+                <span class="input-label-desc">min/km</span>
+            </label>
+            <label class="item item-select">
+                <span class="input-label">Active Level outside running</span>
+                <select ng-model="model.ActiveLevelSelected" ng-options="y.Text for (x, y) in data.ActiveLevels" ng-change="calculate()"></select>
+            </label>
+        </form>
+        <ion-list>
+            <ion-item class="item-divider results-title">RESULTS</ion-item>
+            <ion-item class="item-divider">Burning Calories</ion-item>
+            <div class="item item-body">
+                <p class="result-item color-green">
+                    <strong>{{results.CaloriesBurned.WithoutRunning}}</strong> without running
+                </p>
+                <p class="result-item color-green">
+                    <strong>{{results.CaloriesBurned.FromRunning}}</strong> from running
+                </p>
+                <p class="result-item color-green">
+                    <strong>{{results.CaloriesBurned.Total}}</strong> total for the day
+                </p>
+            </div>
+            <ion-item>Without running</ion-item>
+            <ion-item>From running</ion-item>
+            <ion-item>Total for the day</ion-item>
+            <ion-item class="item-divider">"Typical" Recommended Runner's diet</ion-item>
+            <div class="item item-body">
+                <p class="result-item color-green">
+                    <strong>{{results.RunnersDiet.Carbohydrates}}</strong> grams of carbohydrate
+                </p>
+                <p class="result-item color-green">
+                    <strong>{{results.RunnersDiet.Fat}}</strong> grams of fat
+                </p>
+                <p class="result-item color-green">
+                    <strong>{{results.RunnersDiet.Protein}}</strong> grams of protein
+                </p>
+            </div>
+            <ion-item>Carbohydrate</ion-item>
+            <ion-item>Fat</ion-item>
+            <ion-item>Protein</ion-item>
+        </ion-list>
+        <div style="height: 10px">
+
+        </div>
+    </ion-content>
 </ion-view>
