Implement app globalization / internationalization

--- a/SmartMarathon.IonicApp/www/templates/gSSI.html
+++ b/SmartMarathon.IonicApp/www/templates/gSSI.html
@@ -1,79 +1,69 @@
-<ion-view title="GSSI Nutrition Calculator" class="bgcolor-green">
+<ion-view title="{{$parent.strings.GSSI_Title}}" class="bgcolor-green">
     <ion-content padding="true" style="background: url(img/bg-box.png) no-repeat center;background-size:cover;" class="has-header">
-        <form class="list nutrition-calculator">
-            <ion-item class="item-divider">Parameters</ion-item>
-
+        <form class="list">
+            <ion-item class="item-divider">{{$parent.strings.GSSI_Parameters}}</ion-item>
             <label class="item item-select">
-                <span class="input-label">Gender</span>
-                <select ng-model="model.GenderSelected" ng-options="y.Text for (x, y) in data.Genders" ng-change="calculate()"></select>
+                <span class="input-label">{{$parent.strings.GSSI_Gender}}</span>
+                <select ng-model="model.GenderSelected" ng-options="y.Text for (x, y) in data.Genders" ng-change="calculate()">
+                    <option value="" disabled>{{$parent.strings.GSSI_Select}}</option>
+                </select>
             </label>
-
-            <div class="row">
-                <label class="col-75 item item-input item-floating-label">
-                    <span class="input-label">Age</span>
-                    <input type="number" placeholder="Your age" min="1" max="99" ng-model="model.Age" ng-change="calculate()">
-                </label>
-                <label class="col-25 input-label-desc">years</label>
-            </div>
-            <div class="row">
-                <label class="col-75 item item-input item-floating-label">
-                    <span class="input-label">Height</span>
-                    <input type="number" min="50" max="220" placeholder="Your height" class="input-label-number" ng-model="model.Height" ng-change="calculate()">
-                </label>
-                <label class="col-25 input-label-desc">cms</label>
-            </div>
-            <div class="row">
-                <label class="col-75 item item-input item-floating-label">
-                    <span class="input-label">Weight</span>
-                    <input type="number" min="50" max="500" placeholder="Your weight" class="input-label-number" ng-model="model.Weight" ng-change="calculate()">
-                </label>
-                <label class="col-25 input-label-desc">kgs</label>
-            </div>
-            <div class="row">
-                <label class="col-75 item item-input item-floating-label">
-                    <span class="input-label">Time spent running</span>
-                    <input type="number" min="1" max="600" placeholder="Time spent" class="input-label-number" ng-model="model.TimeSpent" ng-change="calculate()">
-                </label>
-                <label class="col-25 input-label-desc">minutes</label>
-            </div>
-            <div class="row">
-                <label class="col-75 item item-input item-floating-label">
-                    <span class="input-label">Avg Pace of your run</span>
-                    <input type="number" min="2.5" max="20" step="0.1" placeholder="Avg pace" class="input-label-number" ng-model="model.AvgPace" ng-change="calculate()">
-                </label>
-                <label class="col-25 input-label-desc">min/km</label>
-            </div>
-
+            <label class="item item-input">
+                <span class="input-label">{{$parent.strings.GSSI_Age}}</span>
+                <input type="number" min="1" max="99" class="input-label-number" ng-model="model.Age" ng-change="calculate()">
+                <span class="input-label-desc">{{$parent.strings.GSSI_Years}}</span>
+            </label>
+            <label class="item item-input">
+                <span class="input-label">{{$parent.strings.GSSI_Height}}</span>
+                <input type="number" min="50" max="220" class="input-label-number" ng-model="model.Height" ng-change="calculate()">
+                <span class="input-label-desc">{{$parent.strings.GSSI_Cms}}</span>
+            </label>
+            <label class="item item-input">
+                <span class="input-label">{{$parent.strings.GSSI_Weight}}</span>
+                <input type="number" min="50" max="500" class="input-label-number" ng-model="model.Weight" ng-change="calculate()">
+                <span class="input-label-desc">{{$parent.strings.GSSI_Kgs}}</span>
+            </label>
+            <label class="item item-input">
+                <span class="input-label">{{$parent.strings.GSSI_TimeSpent}}</span>                
+                <input type="number" min="1" max="600" class="input-label-number" ng-model="model.TimeSpent" ng-change="calculate()">
+                <span class="input-label-desc">{{$parent.strings.GSSI_Minutes}}</span>
+            </label>
+            <label class="item item-input">
+                <span class="input-label">{{$parent.strings.GSSI_AvgPaceRun}}</span>
+                <input type="number" min="2.5" max="20" step="0.1" class="input-label-number" ng-model="model.AvgPace" ng-change="calculate()">
+                <span class="input-label-desc">{{$parent.strings.GSSI_MinKm}}</span>
+            </label>
             <label class="item item-select">
-                <span class="input-label">Active Level outside running</span>
-                <select ng-model="model.ActiveLevelSelected" ng-options="y.Text for (x, y) in data.ActiveLevels" ng-change="calculate()"></select>
+                <span class="input-label">{{$parent.strings.GSSI_ActiveLevel}}</span>
+                <select ng-model="model.ActiveLevelSelected" ng-options="y.Text for (x, y) in data.ActiveLevels" ng-change="calculate()">
+                    <option value="" disabled>{{$parent.strings.GSSI_Select}}</option>
+                </select>
             </label>
         </form>
-
         <ion-list>
-            <ion-item class="item-divider results-title">RESULTS</ion-item>
-            <ion-item class="item-divider">Burning Calories</ion-item>
+            <ion-item class="item-divider results-title">{{$parent.strings.GSSI_Results}}</ion-item>
+            <ion-item class="item-divider">{{$parent.strings.GSSI_BurningCalories}}</ion-item>
             <div class="item item-body">
                 <p class="result-item color-green">
-                    <strong>{{results.CaloriesBurned.WithoutRunning}}</strong> without running
+                    <strong>{{results.CaloriesBurned.WithoutRunning}}</strong>{{$parent.strings.GSSI_WithoutRunning}}
                 </p>
                 <p class="result-item color-green">
-                    <strong>{{results.CaloriesBurned.FromRunning}}</strong> from running
+                    <strong>{{results.CaloriesBurned.FromRunning}}</strong>{{$parent.strings.GSSI_FromRunning}}
                 </p>
                 <p class="result-item color-green">
-                    <strong>{{results.CaloriesBurned.Total}}</strong> total for the day
+                    <strong>{{results.CaloriesBurned.Total}}</strong>{{$parent.strings.GSSI_TotalDay}}
                 </p>
             </div>
-            <ion-item class="item-divider">"Typical" Recommended Runner's diet</ion-item>
+            <ion-item class="item-divider">{{$parent.strings.GSSI_RecommendedDiet}}</ion-item>
             <div class="item item-body">
                 <p class="result-item color-green">
-                    <strong>{{results.RunnersDiet.Carbohydrates}}</strong> grams of carbohydrate
+                    <strong>{{results.RunnersDiet.Carbohydrates}}</strong>{{$parent.strings.GSSI_GramsCarbo}}
                 </p>
                 <p class="result-item color-green">
-                    <strong>{{results.RunnersDiet.Fat}}</strong> grams of fat
+                    <strong>{{results.RunnersDiet.Fat}}</strong>{{$parent.strings.GSSI_GramsFat}}
                 </p>
                 <p class="result-item color-green">
-                    <strong>{{results.RunnersDiet.Protein}}</strong> grams of protein
+                    <strong>{{results.RunnersDiet.Protein}}</strong>{{$parent.strings.GSSI_GramsProtein}}
                 </p>
             </div>
         </ion-list>
