--- a/SmartMarathon.IonicApp/www/templates/smartMarathon.html
+++ b/SmartMarathon.IonicApp/www/templates/smartMarathon.html
@@ -1,10 +1,10 @@
-<ion-view title="Smart Marathon" id="smartMarathon" class="bgcolor-green">
+<ion-view title="{{$parent.strings.SM_Title}}" id="smartMarathon" class="bgcolor-green">
     <ion-content padding="true" class="has-header">
-        <p class="description-text">Fill your goal time and classify each split according race altimetry</p>
+        <p class="description-text">{{$parent.strings.SM_Instructions}}</p>
         <div class="list" style="color: #00582A;">
 
             <label class="item item-input item-floating-label">
-                <span class="input-label">GOAL TIME</span>
+                <span class="input-label">{{$parent.strings.SM_GoalTime}}</span>
                 <input type="text" class="hidden" placeholder="0:00:00" ng-model="model.GoalTimeTestValue">
                 <label class="input-fake" ion-datetime-picker time seconds ng-model="model.GoalTimeTestValue" ng-change="goalTimeChanged()">
                     {{model.GoalTimeTestValue| date: "H:mm:ss"}}
@@ -12,46 +12,65 @@
             </label>
 
             <label class="item item-input item-floating-label">
-                <span class="input-label">GOAL TIME</span>
+                <span class="input-label">{{$parent.strings.SM_GoalPace}}</span>
                 <input type="text" class="hidden" placeholder="0:00:00" ng-model="model.GoalTimeTestValue">
                 <label class="input-fake" ion-datetime-picker time seconds ng-model="model.GoalTimeTestValue" ng-change="goalTimeChanged()">
                     {{model.GoalTimeTestValue| date: "H:mm:ss"}}
-                    <span class="input-label-desc" ng-show="data.IsMetric">min/km</span>
-                    <span class="input-label-desc" ng-hide="data.IsMetric">min/mile</span>
+                    <span class="input-label-desc" ng-show="data.IsMetric">{{$parent.strings.SM_MinKm}}</span>
+                    <span class="input-label-desc" ng-hide="data.IsMetric">{{$parent.strings.SM_MinMile}}</span>
                 </label>
             </label>
 
             <label class="item item-select">
-                <span class="input-label">DISTANCE</span>
+                <span class="input-label">{{$parent.strings.SM_Distance}}</span>
                 <select ng-model="model.SelectedDistance" ng-options="y.Text for (x, y) in data.Distances" ng-change="loadEvents()"></select>
             </label>
 
             <label class="item item-input item-floating-label" ng-show="isCustomDistance()">
-                <span class="input-label">YOUR DISTANCE</span>
-                <input type="number" placeholder="YOUR DISTANCE" min="1" max="999" ng-model="model.RealDistance" ng-change="refresh()">
+                <span class="input-label">{{$parent.strings.SM_YourDistance}}</span>
+                <input type="number" placeholder="{{$parent.strings.SM_YourDistance}}" min="1" max="999" ng-model="model.RealDistance" ng-change="refresh()">
             </label>
 
             <label class="item item-select" ng-hide="isCustomDistance()">
-                <span class="input-label">EVENT</span>
+                <span class="input-label">{{$parent.strings.SM_Event}}</span>
                 <select ng-model="model.Event" ng-options="y.Text for (x, y) in data.Events" ng-change="loadSplits()"></select>
             </label>
         </div>
         <div class="kilometer-list">
             <div class="row kilometer-header">
                 <div class="col col-10" style="text-align: left;">
-                    <label>KM</label>
+                    <label ng-show="data.IsMetric">{{$parent.strings.SM_Km}}</label>
+                    <label ng-hide="data.IsMetric">{{$parent.strings.SM_Mile}}</label>
                 </div>
                 <div class="col col-50">
-                    <label>ALTIMETRY</label>
+                    <label>{{$parent.strings.SM_Altimetry}}</label>
                 </div>
                 <div class="col col-20">
-                    <label>PACE</label>
+                    <label>{{$parent.strings.SM_Pace}}</label>
                 </div>
                 <div class="col col-20">
-                    <label>TIME</label>
+                    <label>{{$parent.strings.SM_Time}}</label>
                 </div>
             </div>
-            <div class="row kilometer-body" ng-repeat="split in model.Splits.Kilometers">
+            <div class="row kilometer-body" ng-repeat="split in model.Splits.Kilometers" ng-show="data.IsMetric">
+                <div class="col col-10" style="text-align: left;">
+                    <label>{{split.Split}}</label>
+                </div>
+                <div class="col col-50">
+                    <div class="item range">
+                        <i class="ion-arrow-graph-down-right"></i>
+                        <input type="range" ng-model="split.Category" value="{{split.Category}}" min="-1" max="1" ng-change="refresh()">
+                        <i class="ion-arrow-graph-up-right"></i>
+                    </div>
+                </div>
+                <div class="col col-20">
+                    <label ng-bind="displayTime(split.Pace)"></label>
+                </div>
+                <div class="col col-20">
+                    <label ng-bind="displayTime(split.Time)"></label>
+                </div>
+            </div>
+            <div class="row kilometer-body" ng-repeat="split in model.Splits.Miles" ng-hide="data.IsMetric">
                 <div class="col col-10" style="text-align: left;">
                     <label>{{split.Split}}</label>
                 </div>
