--- a/SmartMarathon.IonicApp/www/templates/gSSI.html
+++ b/SmartMarathon.IonicApp/www/templates/gSSI.html
@@ -29,7 +29,8 @@
                 	<span class="input-label">{{$parent.strings.GSSI_Weight}}</span>
                     <input type="number" min="50" max="500" placeholder="{{$parent.strings.GSSI_Weight}}" class="input-label-number" ng-model="model.Weight" ng-change="calculate()">
                 </label>
-                <label class="col-25 input-label-desc">{{$parent.strings.GSSI_Kgs}}</label>
+                <label class="col-25 input-label-desc" ng-show="data.IsMetric">{{$parent.strings.GSSI_Kgs}}</label>
+                <label class="col-25 input-label-desc" ng-hide="data.IsMetric">{{$parent.strings.GSSI_Pounds}}</label>
             </div>
             <div class="row">
                 <label class="col-75 item item-input item-floating-label">
@@ -43,7 +44,8 @@
                 	<span class="input-label">{{$parent.strings.GSSI_AvgPaceRun}}</span>
                     <input type="number" min="2.5" max="20" step="0.1" placeholder="{{$parent.strings.GSSI_AvgPaceRun}}" class="input-label-number" ng-model="model.AvgPace" ng-change="calculate()">
                 </label>
-                <label class="col-25 input-label-desc">{{$parent.strings.GSSI_MinKm}}</label>
+                <label class="col-25 input-label-desc" ng-show="data.IsMetric">{{$parent.strings.GSSI_MinKm}}</label>
+                <label class="col-25 input-label-desc" ng-hide="data.IsMetric">{{$parent.strings.GSSI_MinMile}}</label>
             </div>
             <label class="item item-select">
                 <span class="input-label">{{$parent.strings.GSSI_ActiveLevel}}</span>
